--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <h1  class='titleName'>Astro Clock</h1>
-
+    <div class='stars'></div>
     <div class='clock'>
         <div class='outerClockFace'>
             <div class='hourMark hourMarking-one'></div>
