stars move, fade effects, linked to github

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,22 +11,32 @@
 
 
 </head>
+
 <body>
-    <h1  class='titleName'>Astro Clock</h1>
-    <div class='stars'></div>
-    <div class='clock'>
-        <div class='outerClockFace'>
-            <div class='hourMark hourMarking-one'></div>
-            <div class='hourMark hourMarking-two'></div>
-            <div class='hourMark hourMarking-three'></div>
-            <div class='hourMark hourMarking-four'></div>
-            <div class='innerClockFace'>
-                <div class='clockHand hour-hand'></div>
-                <div class='clockHand minute-hand'></div>
-                <div class='clockHand second-hand'></div>
+    <div>
+        <a class='titleName' href='https://github.com/kDurg/analogClock' target='_blank'>Astro Clock</a>
+        <h3 class='byLine'>By: Kyle Durigan</h3>
+    </div>
+    <div class='content'>
+
+        <div class='stars' id='stars'></div>
+
+        <div class='clock'>
+            <div class='outerClockFace'>
+                <div class='hourMark hourMarking-one'></div>
+                <div class='hourMark hourMarking-two'></div>
+                <div class='hourMark hourMarking-three'></div>
+                <div class='hourMark hourMarking-four'></div>
+                <div class='innerClockFace'>
+                    <div class='clockHand hour-hand'></div>
+                    <div class='clockHand minute-hand'></div>
+                    <div class='clockHand second-hand'></div>
+                </div>
+
             </div>
         </div>
+
     </div>
-    
 </body>
+
 </html>
